# cal-optimal

./: .gitignore  README.md  main.py  pyproject.toml  pysidedeploy.spec  requirements-dev.txt  requirements.txt
optimal/: algo.py  constants.py  gui.py  render.py
